<resources>
    <string name="app_name">" Exhibition Explorer"</string>
    <string name="title_activity_main">Exhibition Explorer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_txt_museum">Museum</string>
    <string name="nav_txt_exhibition">Explorer</string>
    <string name="nav_txt_favorite">Favorite</string>
    <string name="nav_txt_settings">Settings</string>
    <string name="nav_txt_help_and_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="nav_txt_sign_in">Sign In</string>
    <string name="nav_txt_sign_out">Sign Out</string>
    <string name="nav_menu_others">Others</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Sign In</string>
    <string name="sign_up_text">Register now!</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="password_confirm_hint">Confirm password</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="confirm_email_error">Please make sure you enter the same password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="forgot_password_send_email">Send Email</string>
    <string name="txt_reset_password">Just type in your e-mail address and we will send you a password verification email.</string>
    <string name="forgot_password_text">Forgot your password?</string>
    <string name="forgot_password_miss_data_error_message">Please make sure you enter an email address!</string>
    <string name="forgot_password_miss_data_error_title">Error!</string>
    <string name="forgot_password_succesfull_sent_email_message">An email has been sent to %1$s. Please check it!</string>
    <string name="forgot_password_succesfull_sent_email_title">Check your email!</string>
    <string name="back_text"><![CDATA[< Back]]></string>
    <string name="title_registration">Registration</string>
    <string name="choose_exhibition_text">No exhibition selected at the moment! \n Please select an exhibition to start exploring!</string>
    <string name="nav_txt_catalog">Catalog</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vestibulum nibh ac nibh fringilla tincidunt. Vestibulum efficitur in sapien et placerat. Ut turpis ante, accumsan posuere massa et, lacinia venenatis lorem. Nullam in consectetur orci. Morbi id tempus nunc, vitae cursus arcu. Aliquam imperdiet nisi a malesuada malesuada. Fusce volutpat pulvinar sem, in semper augue ornare nec. In hac habitasse platea dictumst. Nullam at accumsan elit. Proin tincidunt vitae massa et egestas. Fusce lacinia massa ut sem accumsan malesuada. In euismod varius augue, sit amet tincidunt neque bibendum vel. Nam mi lorem, feugiat consectetur enim id, posuere dictum enim. Nam sodales laoreet imperdiet. Pellentesque laoreet diam neque, sit amet elementum nibh feugiat finibus. Nulla facilisi. Vivamus aliquam massa in lectus dignissim aliquet. Morbi auctor facilisis neque, sed congue mi vestibulum sed. In enim dolor, tempus vitae ornare eu, consequat eget dui. Mauris nec erat in metus elementum mollis in sed risus. Duis in ullamcorper leo. Maecenas vel egestas urna. Duis tristique consequat diam sit amet convallis. Morbi pellentesque, ex at aliquam maximus, eros mauris porttitor libero, eu eleifend urna metus non tortor. Integer rhoncus magna imperdiet turpis ornare placerat. Praesent vel eleifend dui. Curabitur pulvinar mi sit amet finibus dapibus. Aenean volutpat malesuada urna, et dignissim purus fringilla vel. Suspendisse augue dui, commodo in orci non, maximus vehicula nulla. Fusce imperdiet vestibulum purus id malesuada. Fusce congue nisi et vestibulum sodales. Morbi eleifend ullamcorper porta. In sed metus lacus. Nunc diam neque, placerat ut est sit amet, mollis consequat dolor. Phasellus viverra, arcu eu aliquam euismod, orci leo maximus mi, vitae vestibulum leo est eget augue. Maecenas vitae malesuada arcu. Vestibulum eget elit id erat venenatis aliquam. Aenean fermentum facilisis ex vitae maximus. Donec ut odio sed dolor posuere tempus vehicula id quam. Curabitur sit amet orci non justo tempor sollicitudin eu eu eros. Vestibulum ut odio in nisl porta venenatis. Aenean ultrices a mi in placerat. Suspendisse viverra justo ac vulputate varius. Mauris semper facilisis tortor quis imperdiet. In vel lacinia ligula. Aenean semper commodo suscipit. Quisque a diam quis quam hendrerit rutrum.</string>
    <string name="parameter_open_duration_text">Date:    %1$s</string>
    <string name="parameter_location_text">Location:   %1$s</string>
    <string name="exhibition_details_title">Exhibition details</string>
    <string name="description_title">Description</string>
    <string name="exploration_details_title">Exploration Details</string>
    <string name="parameter_ibeacons_text">iBeacons:   %1$s</string>
    <string name="parameter_qr_code_text">QR-codes:   %1$s</string>
    <string name="parameter_quiz_text">Quiz:   %1$s</string>
    <string name="catalog_detail_toolbar_title">Catalog Detail</string>
    <string name="artifact_detail_toolbar_title">Artifact Details</string>
    <string-array name="checked_nav_text">
        <item>@string/nav_txt_exhibition</item>
        <item>@string/nav_txt_catalog</item>
        <item>@string/nav_txt_favorite</item>
    </string-array>
    <string name="title_bluetooth_le_not_available">Bluetooth LE not available</string>
    <string name="sorry_bluetooth_not_supported">Bluetooth LE not supported</string>
    <string name="title_bluetooth_not_enabled">Bluetooth not enabled</string>
    <string name="enable_bluetooth">Enable</string>
    <string name="there_is_no_favorite">You haven\'t got any favorites yet.</string>
    <string name="show_map_text">Show map!</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings_title">Settings</string>
    <string name="key_pref_ibeacon">prefIBeacon</string>
    <string name="key_user_statistics">KEY_USER_STATISTICS</string>
    <string name="saved_items">Saved Items</string>
    <string name="trivia_progress">Trivia progress</string>
    <string name="trivia_status_value">%1$d/%2$d</string>
    <string name="clear_result">Clear results</string>
    <string name="user_statistics">Statistics</string>
    <string name="user_information">User information</string>
    <string name="log_out">Log Out</string>
    <string name="profile">Profile</string>
    <string name="cancel">Cancel</string>
    <string name="looking_for_ibeacons">Looking for iBeacons</string>
    <string name="button_turn_on">Turn On</string>
    <string name="search_beacon_information_text">Artifact will appear here once you get close enough to their beacon. Try moving closer</string>
</resources>
