<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:theme="@style/AppTheme.FullScreen"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    tools:background="@drawable/login_background">

    <TextView
        android:text="@string/forgot_password_text"
        android:paddingTop="70dp"
        style="@style/TextAppearance.Appcompat.Large.White"
        android:gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:gravity="center_horizontal"
        style="@style/TextAppearance.AppCompat.Medium.White"
        android:layout_marginBottom="20dp"
        android:text="@string/txt_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btnSendEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_send_email" />

    <TextView
        android:padding="5dp"
        android:id="@+id/tvBack"
        android:layout_marginTop="30dp"
        android:text="@string/back_text"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</LinearLayout>