<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint" >
    </EditText>

    <EditText android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/edEmail"
        android:layout_below="@id/edEmail"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_hint"/>

    <EditText android:id="@+id/edPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/edPassword"
        android:layout_below="@id/edPassword"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_confirm_hint"/>

    <Button android:id="@+id/btnSIgnUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edPasswordConfirm"
        android:layout_below="@+id/edPasswordConfirm"
        android:text="@string/sign_up_button_label"/>

</RelativeLayout>
