<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/lySearchBeacon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="visible">


        <TextView android:id="@+id/beaconSearchText"
            android:layout_marginTop="20dp"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/looking_for_ibeacons" />

        <TextView android:text="@string/search_beacon_information_text"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content" />

        <com.github.rahatarmanahmed.cpv.CircularProgressView
            android:layout_centerHorizontal="true"
            android:layout_below="@id/beaconSearchText"
            android:id="@+id/progress_view"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:cpv_animAutostart="true"
            app:cpv_indeterminate="true" />

        <ImageView
            android:id="@+id/ivBeaconSearch"
            android:layout_marginBottom="30dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="100dp"
            android:src="@drawable/ibeacon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/lyNeedBluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Please turn on bluetooth to use explorer mode" />

        <Button
            android:id="@+id/btnBluetoothTurnOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_turn_on" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyNotSupportedBluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <ImageView android:layout_marginBottom="30dp"
            android:src="@drawable/ic_action_barcode_black"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Sorry your device not supported Bluetooth Low Energy. You can use the Qr Code Reader" />


    </LinearLayout>


</RelativeLayout>